# sequence

./: .build.yml  .gitignore  main.cc  pyproject.toml  sequence.proto  sequence.py
ncseq/: __main__.py  game.py
ncseq/ui/: console.py  tui.py
pysequence/: __main__.py
