[tool.poetry]
name = "pysequence"
version = "0.1.0"
description = "SEQUENCE Game"
authors = ["Jack Rosenthal <jack@rosenth.al>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "21.12b0"

[tool.poetry.scripts]
pysequence = "pysequence.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
