[tool.poetry]
name = "ncseq"
version = "0.1.0"
description = "SEQUENCE Game"
authors = ["Jack Rosenthal <jack@rosenth.al>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "21.12b0"
flake8 = "4.0.1"
isort = "5.10.1"

[tool.poetry.scripts]
ncseq = "ncseq.__main__:main"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
